--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Tugas - Grafika Komputer</title>
   </head>
   <body>
     <main>
+      <h1>Reyhan Naufal Rahman - 05111940000171</h1>
       <canvas id="webgl" class="canvas-container"
         >Browser tidak mendukung webgl</canvas
       >
