[ADD] handle leaf animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>Reyhan Naufal Rahman - 05111940000171</h1>
-      <canvas id="webgl" class="canvas-container"
+      <canvas id="webgl-canvas" class="canvas-container"
         >Browser tidak mendukung webgl</canvas
       >
     </main>
