[ADD] refactor tugas threejs-2

--- a/threejs-tugas-2/src/index.html
+++ b/threejs-tugas-2/src/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reyhan Naufal Rahman - 05111940000171</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grafkom Tugas-3</title>
+</head>
+<body>
     <canvas class="app"></canvas>
-  </body>
+    <div class="board">
+        <h1>Tugas Grafika Komputer 3 - Reyhan Naufal Rahman</h1>
+        <p>Nilai: <a id="score">0</a></p>
+        <p>Nilai tertinggi: <a id="high-score">0</a></p>
+    </div>
+</body>
 </html>
